Edited wiki page ComputerHowTo through web user interface.

--- a/wiki/ComputerHowTo.wiki
+++ b/wiki/ComputerHowTo.wiki
@@ -1,5 +1,4 @@
 #summary How to use 'Computer' class
-#labels Phase-Implementation
 
 = Overview =
 
@@ -8,22 +7,22 @@ Class *org.palettelabs.iumls.computer.Computer* performs computation of Expressi
 = Libraries =
 
 By default 'Computer' has only two libraries connected:
-* system - {@link SystemLibrary};
-* math - {@link MathLibrary}.
+  * "system";
+  * "math".
 
 
 = Operators =
 
 By default 'Computer' has these operators (with precedence) connected:
-* "==" (1) references to library "system";
-* "!=" (1) references to library "system";
-* "||" (2) references to library "system";
-* "&&" (3) references to library "system";
-* ">" (4) references to library "system";
-* "<" (4) references to library "system";
-* ">=" (4) references to library "system";
-* "<=" (4) references to library "system";
-* "+" (5) references to library "math";
-* "-" (5) references to library "math";
-* "*" (6) references to library "math";
-* "/" (6) references to library "math".
+  * "==" (1) references to library "system";
+  * "!=" (1) references to library "system";
+  * "||" (2) references to library "system";
+  * "&&" (3) references to library "system";
+  * ">" (4) references to library "system";
+  * "<" (4) references to library "system";
+  * ">=" (4) references to library "system";
+  * "<=" (4) references to library "system";
+  * "+" (5) references to library "math";
+  * "-" (5) references to library "math";
+  * "`*`" (6) references to library "math";
+  * "/" (6) references to library "math".
